
What's New in Python 3.1.3?
===========================

*Release date: 20XX-XX-XX*

Build
-----

- Issue #1628484: The Makefile doesn't ignore the CFLAGS environment
  variable anymore.  It also forwards the LDFLAGS settings to the linker
  when building a shared library.


What's New in Python 3.1.2?
===========================

*Release date: 2010-03-20*

Core and Builtins
-----------------

- Issue #7173: Generator finalization could invalidate sys.exc_info().

Library
-------

- Issue #2698: The --compiler ignored was ignored for distutils' build_ext.

- Issue #4961: Inconsistent/wrong result of askyesno function in tkMessageBox
  with Tcl/Tk-8.5.

- Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
  the locale.


What's New in Python 3.1.2 release candidate 1?
===============================================

*Release date: 2010-03-06*

Core and Builtins
-----------------

- Issue #7544: Preallocate thread memory before creating the thread to avoid
  a fatal error in low memory condition.

- Issue #7820: The parser tokenizer restores all bytes in the right if
  the BOM check fails.

- Handle errors from looking up __prepare__ correctly.

- Issue #5939: Add additional runtime checking to ensure a valid capsule
  in Modules/_ctypes/callproc.c.

- Issue #7309: Fix unchecked attribute access when converting
  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
  strings.

- Issue #6902: Fix problem with built-in types format incorrectly with
  0 padding.

- Issue #7988: Fix default alignment to be right aligned for
  complex.__format__. Now it matches other numeric types.

- Issue #7385: Fix a crash in `MemoryView_FromObject` when
  `PyObject_GetBuffer` fails.  Patch by Florent Xicluna.

- Issue #7788: Fix an interpreter crash produced by deleting a list
  slice with very large step value.

- Issue #7561: Operations on empty bytearrays (such as `int(bytearray())`)